Implemented recommendation save for user
